# todoappserver

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
todo/: admin.py  models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todo_image.py  0003_auto_20210824_1458.py  0004_alter_todo_date.py  0005_auto_20210824_1733.py  0006_auto_20210826_1728.py  0007_auto_20210904_2346.py  0008_auto_20210906_0621.py  0009_alter_todo_date.py  0010_auto_20210906_0640.py  0011_auto_20210906_0641.py  0012_auto_20210907_1618.py  0013_alter_todo_date.py
todo_drf/: asgi.py  settings.py  urls.py  wsgi.py
