[tool.poetry]
name = "todo_drf"
version = "1"
description = "package dependencies of todo_app server"
authors = ["takato <takato20010814@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.4.1"
black = "22.3.0"
click = "8.1.2"
Django = "3.2.6"
django-filter = "2.4.0"
djangorestframework = "3.12.4"
Markdown = "3.3.4"
mypy-extensions = "0.4.3"
pathspec = "0.9.0"
Pillow = "8.3.1"
platformdirs = "2.5.1"
pytz = "2021.1"
sqlparse = "0.4.1"
tomli = "2.0.1"
typing-extensions = "4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
